# optDFTw

./: .gitattributes  .gitignore  CMakeLists.txt  run_cmake.bat
example/: result_IOp_w.txt  result_option_w.txt  template.gjf  template.inp
include/: w_optimizer.hpp
src/: main.cpp  optimizer_advanced.cpp  optimizer_basic.cpp  reader.cpp  writer.cpp
